[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "iso-42001-ai-mcp"
version = "1.0.0"
description = "ISO/IEC 42001 AI Management System compliance server — Built by MEOK AI Labs | https://meok.ai"
authors = [{name="MEOK AI Labs", email="nicholas@meok.ai"}]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
keywords = ["mcp", "mcp-server", "model-context-protocol", "claude", "ai-tools", "meok-ai-labs", "iso-42001", "ai-management", "compliance", "certification", "governance", "risk-assessment"]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Intended Audience :: Developers",
]
dependencies = [
    "mcp>=1.0.0",
]

[project.urls]
Homepage = "https://meok.ai"
Repository = "https://github.com/CSOAI-ORG/iso-42001-ai-mcp"
Documentation = "https://meok.ai/docs/iso-42001-ai-mcp"
"Bug Tracker" = "https://github.com/CSOAI-ORG/iso-42001-ai-mcp/issues"
